--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     <nav class="main-nav" role="navigation">
                         <ul class="main-menu">
                             <li><a href="#section0">Inicial</a></li>
-                            <li><a href="#section1">O Primeiro Passo</a></li>
-                            <li><a href="#section2">xxx</a></li>
+                            <li><a href="#section1">Rápido e Fácil</a></li>
+                            <li><a href="#section2">Ferramentas</a></li>
                             <li><a href="#section3">Noticias</a></li>
-                            <li><a href="#section4">xxx</a></li>
+                            <li><a href="#section4">Legislação</a></li>
                         </ul>
                     </nav>
                     <!--  <div class="social-network">
@@ -67,7 +67,7 @@
                     </div>-->
                     <div class="copyright-text">
                         <p>2021 IFSC-Canoinhas Privacidade x Segurança<br>Trabalho de Informatica,Etica e Sociedade.</p>
-                        <button><a href="http://alexandrejusten.ddns.net/indeex" target="_blank"> Contato</a></button>
+                        <div class="white-button"><a href="http://alexandrejusten.ddns.net" target="_blank"> Contato</a></div>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,10 @@
                     <div class="col-md-6">
                         <div class="left-text">
                             <p>A internet é um meio de comunicação incrivel,porem ela tambem pode ser usada para coletar seus dados e informaçoes.Grandes empresas como facebook sobrevivem vendendo dados de seus usuarios.hacker tambem podem conseguir acesso
-                                as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria</p>
+                                as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria textotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotexto
+                                textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotex totextotexto textotextotextotextotextotextotextotextotextotexto
+                                textotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -95,13 +98,22 @@
                             <img src="assets/images/sec2.png" alt="" />
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <div class="right-text">
+                            <p>A internet é um meio de comunicação incrivel,porem ela tambem pode ser usada para coletar seus dados e informaçoes.Grandes empresas como facebook sobrevivem vendendo dados de seus usuarios.hacker tambem podem conseguir acesso
+                                as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria textotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotexto
+                                textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotex totextotexto textotextotextotextotextotextotextotextotextotexto
+                                textotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
         <section class="section about-me" data-section="section1">
             <div class="container">
                 <div class="section-heading">
-                    <h2>VPN</h2>
+                    <h2>Rápido e Fácil</h2>
                     <div class="line-dec"></div>
                     <span>Uma Otima Opção para o dia a dia,Segurança e Privacidade com 1 Click mas tudo tem seus limites</span>
                 </div>
@@ -119,7 +131,7 @@
                                     ProtonVpn É um serviço de Vpn da Proton uma empresa que tem seus servidores na suiça e é muito conhecida pelo ProtonMail conhecido como o email mais seguro da WEB
                                 </p>
                                 <div class="white-button">
-                                    <a href="#">Read More</a>
+                                    <a href="#">Leia Mais</a>
                                 </div>
                             </div>
                         </div>
@@ -134,7 +146,7 @@
                                     O Tor é muito mais que um Browser e isso vai ser abordado abaixo mas no momento vamos focar No navegador que pode fazer você ficar praticamente inrrastreavel na rede
                                 </p>
                                 <div class="white-button">
-                                    <a href="#">Read More</a>
+                                    <a href="#">Leia Mais</a>
                                 </div>
                             </div>
                         </div>
@@ -151,56 +163,68 @@
         <section class="section my-services" data-section="section2">
             <div class="container">
                 <div class="section-heading">
-                    <h2>What I’m good at?</h2>
+                    <h2>Ferramentas para Anonimato</h2>
                     <div class="line-dec"></div>
-                    <span>Curabitur leo felis, rutrum vitae varius eu, malesuada a tortor.
-              Vestibulum congue leo et tellus aliquam, eu viverra nulla semper.
-              Nullam eu faucibus diam. Donec eget massa ante.</span
+                    <span>Sistemas e tecnologias usandas de forma mais proficionais e especificadas
+                      </span
             >
           </div>
           <div class="row">
             <div class="col-md-6">
               <div class="service-item">
                 <div class="first-service-icon service-icon"></div>
-                <h4>HTML5 &amp; CSS3</h4>
+                <h4>Linux Tails</h4>
                 <p>
-                  Phasellus non convallis dolor. Integer tempor hendrerit arcu
-                  at bibendum. Sed ac ante non metus vehicula congue quis eget
-                  eros.
+                  Tails é um sistema operacional que usa a rede Tor para proteger sua privacidade online
+                   e te ajudar a evitar censura. Desfrute a Internet da forma como ela deveria ser.
+                   Você pode baixar Tails gratuitamente e pesquisadores independentes da área de segurança 
                 </p>
+                <div class="white-button">
+                  <a href="#">Leia Mais</a>
+              </div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="second-service-icon service-icon"></div>
-                <h4>Creative Ideas</h4>
+                <h4>Proxychains</h4>
                 <p>
-                  Proin lacus massa, eleifend sed fermentum in, dignissim vel
-                  metus. Nunc accumsan leo nec felis porttitor, ultricies
-                  faucibus purus mollis.
+                  Proxychains é um software de código aberto para sistemas Linux e vem pré-instalado em alguns sistemas,
+                   a ferramenta redireciona conexões TCP através de proxies como TOR, SOCKS4, SOCKS5 e HTTP (S)
+                    e nos permite encadear servidores proxy.
                 </p>
+                <div class="white-button">
+                  <a href="#">Leia Mais</a>
+              </div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="third-service-icon service-icon"></div>
-                <h4>Easy Customize</h4>
+                <h4>DuckDuckgo </h4>
                 <p>
-                  Integer suscipit condimentum aliquet. Nam quis risus metus.
-                  Nullam faucibus quam eget arcu pretium tincidunt. Nam libero
-                  dui.
+                  DuckDuckGo é um motor de pesquisa sediado em Paoli, Pensilvânia. 
+                  Este motor de busca tem a particularidade de utilizar informações de origem Crowdsourcing para
+                   melhorar a relevância dos resultados. A filosofia deste motor de pesquisa enfatiza a privacidade
+                    e não registra as informações do usuário.
                 </p>
+                <div class="white-button">
+                  <a href="#">Leia Mais</a>
+              </div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="fourth-service-icon service-icon"></div>
-                <h4>Admin Dashboard</h4>
+                <h4>Vpn e Rede Tor</h4>
                 <p>
-                  Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
-                  eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
-                  leo nec felis porttitor.
+                  Quando você se conecta à uma VPN, ela criptografa todo o tráfego de internetentre o seu dispositivo e o servidor VPN.
+                  /Tor é um software gratuito de código aberto administrado pelo Tor Project.
+                    Ele anonimiza seu tráfego de internet em diversas camadas de criptografia  Quando você usa o Tor, ele envia seu tráfego através de uma série de três pontos
                 </p>
+                <div class="white-button">
+                  <a href="#">Leia Mais</a>
+              </div>
               </div>
             </div>
           </div>
@@ -359,14 +383,14 @@
     <section class="section contact-me" data-section="section4">
         <div class="container">
             <div class="section-heading">
-                <h2>Contact Me</h2>
+                <h2>LGPD</h2>
                 <div class="line-dec"></div>
-                <span>Fusce eget nibh nec justo interdum condimentum. Morbi justo ex,
-              efficitur at ante ac, tincidunt maximus ligula. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit.</span
+                <span>LGPD é a sigla para Lei Geral de Proteção de Dados do Brasil, 
+                  sancionada em agosto de 2018. A LGPD estabelece regras sobre coleta, armazenamento, tratamento e compartilhamento de dados pessoais, impondo mais proteção e penalidades
+                   para o não cumprimento.</span
             >
           </div>
-          <div class="row">
+         <!--  <div class="row">
             <div class="right-content">
               <div class="container">
                 <form id="contact" action="" method="post">
@@ -430,7 +454,7 @@
                 </form>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
       </section>
     </div>
