--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
                     <div class="col-md-6">
                         <div class="left-text">
                             <p>A internet é um meio de comunicação incrivel,porem ela tambem pode ser usada para coletar seus dados e informaçoes.Grandes empresas como facebook sobrevivem vendendo dados de seus usuarios.hacker tambem podem conseguir acesso
-                                as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria textotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotexto
-                                textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotex totextotexto textotextotextotextotextotextotextotextotextotexto
-                                textotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto
+                                as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria Texto..
                             </p>
                         </div>
                     </div>
@@ -101,9 +99,7 @@
                     <div class="col-md-6">
                         <div class="right-text">
                             <p>A internet é um meio de comunicação incrivel,porem ela tambem pode ser usada para coletar seus dados e informaçoes.Grandes empresas como facebook sobrevivem vendendo dados de seus usuarios.hacker tambem podem conseguir acesso
-                                as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria textotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotexto
-                                textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotex totextotexto textotextotextotextotextotextotextotextotextotexto
-                                textotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto
+                                as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria Texto...
                             </p>
                         </div>
                     </div>
