--- a/index.html
+++ b/index.html
@@ -45,29 +45,9 @@
                             <li><a href="#section4">Legislação</a></li>
                         </ul>
                     </nav>
-                    <!--  <div class="social-network">
-                        <ul class="soial-icons">
-                            <li>
-                                <a href="https://fb.com/templatemo"><i class="fa fa-facebook"></i
-                  ></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-rss"></i></a>
-                            </li>
-                        </ul>
-                    </div>-->
                     <div class="copyright-text">
                         <p>2021 IFSC-Canoinhas Privacidade x Segurança<br>Trabalho de Informatica,Etica e Sociedade.</p>
-                        <div class="white-button"><a href="http://alexandrejusten.ddns.net" target="_blank"> Contato</a></div>
+                        <div class="white-button"><a href="http://contatoweb.ddns.net" target="_blank"> Contato</a></div>
                     </div>
                 </div>
             </div>
@@ -75,16 +55,18 @@
         <section class="section about-me" data-section="section0">
             <div class="container">
                 <div class="section-heading">
-                    <h2>Privacidade e Segurança</h2>
+                    <img src="./assets/images/priv.png" alt="">
+                    <!-- <h2>Privacidade e Segurança</h2>-->
                     <div class="line-dec"></div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="left-text">
+                            <h3>Topico</h3>
                             <p>A internet é um meio de comunicação incrivel,porem ela tambem pode ser usada para coletar seus dados e informaçoes.Grandes empresas como facebook sobrevivem vendendo dados de seus usuarios.hacker tambem podem conseguir acesso
-                                as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria textotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotexto
-                                textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotex totextotexto textotextotextotextotextotextotextotextotextotexto
-                                textotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto
+                                as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria Texto.. A internet é um meio de comunicação incrivel,porem ela tambem pode ser
+                                usada para coletar seus dados e informaçoes.Grandes empresas como facebook sobrevivem vendendo dados de seus usuarios.hacker tambem podem conseguir acesso as suas informaçoes facilmente aqui voce vai ver as ultimas noticias
+                                sobre vazamento de dados e como se defender dessa grande selva binaria Texto..
                             </p>
                         </div>
                     </div>
@@ -100,10 +82,11 @@
                     </div>
                     <div class="col-md-6">
                         <div class="right-text">
+                            <h3>Topico</h3>
                             <p>A internet é um meio de comunicação incrivel,porem ela tambem pode ser usada para coletar seus dados e informaçoes.Grandes empresas como facebook sobrevivem vendendo dados de seus usuarios.hacker tambem podem conseguir acesso
-                                as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria textotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotexto
-                                textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotextotex totextotexto textotextotextotextotextotextotextotextotextotexto
-                                textotextotextotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto textotextotextotextotextotextotextotextotextotextotextotexto
+                                as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria Texto... A internet é um meio de comunicação incrivel,porem ela tambem pode ser
+                                usada para coletar seus dados e informaçoes.Grandes empresas como facebook sobrevivem vendendo dados de seus usuarios.hacker tambem podem conseguir acesso as suas informaçoes facilmente aqui voce vai ver as ultimas noticias
+                                sobre vazamento de dados e como se defender dessa grande selva binaria Texto..
                             </p>
                         </div>
                     </div>
@@ -178,6 +161,7 @@
                   Tails é um sistema operacional que usa a rede Tor para proteger sua privacidade online
                    e te ajudar a evitar censura. Desfrute a Internet da forma como ela deveria ser.
                    Você pode baixar Tails gratuitamente e pesquisadores independentes da área de segurança 
+                   isso ai mesmo faz um bolo de cenoura
                 </p>
                 <div class="white-button">
                   <a href="#">Leia Mais</a>
@@ -187,11 +171,11 @@
             <div class="col-md-6">
               <div class="service-item">
                 <div class="second-service-icon service-icon"></div>
-                <h4>Proxychains</h4>
+                <h4>Vpn e Rede Tor</h4>
                 <p>
-                  Proxychains é um software de código aberto para sistemas Linux e vem pré-instalado em alguns sistemas,
-                   a ferramenta redireciona conexões TCP através de proxies como TOR, SOCKS4, SOCKS5 e HTTP (S)
-                    e nos permite encadear servidores proxy.
+                  Quando você se conecta à uma VPN, ela criptografa todo o tráfego de internetentre o seu dispositivo e o servidor VPN.
+                  /Tor é um software gratuito de código aberto administrado pelo Tor Project.
+                    Ele anonimiza seu tráfego de internet em diversas camadas de criptografia  Quando você usa o Tor, ele envia seu tráfego através de uma série de três pontos
                 </p>
                 <div class="white-button">
                   <a href="#">Leia Mais</a>
@@ -216,11 +200,11 @@
             <div class="col-md-6">
               <div class="service-item">
                 <div class="fourth-service-icon service-icon"></div>
-                <h4>Vpn e Rede Tor</h4>
+                <h4>Proxychains</h4>
                 <p>
-                  Quando você se conecta à uma VPN, ela criptografa todo o tráfego de internetentre o seu dispositivo e o servidor VPN.
-                  /Tor é um software gratuito de código aberto administrado pelo Tor Project.
-                    Ele anonimiza seu tráfego de internet em diversas camadas de criptografia  Quando você usa o Tor, ele envia seu tráfego através de uma série de três pontos
+                  Proxychains é um software de código aberto para sistemas Linux e vem pré-instalado em alguns sistemas,
+                   a ferramenta redireciona conexões TCP através de proxies como TOR, SOCKS4, SOCKS5 e HTTP (S)
+                    e nos permite encadear servidores proxy.um pouco mais de texto aqui para dar volume isso ai pão de qeuijo
                 </p>
                 <div class="white-button">
                   <a href="#">Leia Mais</a>
@@ -387,76 +371,54 @@
                 <div class="line-dec"></div>
                 <span>LGPD é a sigla para Lei Geral de Proteção de Dados do Brasil, 
                   sancionada em agosto de 2018. A LGPD estabelece regras sobre coleta, armazenamento, tratamento e compartilhamento de dados pessoais, impondo mais proteção e penalidades
-                   para o não cumprimento.</span
-            >
-          </div>
-         <!--  <div class="row">
-            <div class="right-content">
-              <div class="container">
-                <form id="contact" action="" method="post">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <fieldset>
-                        <input
-                          name="name"
-                          type="text"
-                          class="form-control"
-                          id="name"
-                          placeholder="Your name..."
-                          required=""
-                        />
-                      </fieldset>
-                    </div>
-                    <div class="col-md-6">
-                      <fieldset>
-                        <input
-                          name="email"
-                          type="text"
-                          class="form-control"
-                          id="email"
-                          placeholder="Your email..."
-                          required=""
-                        />
-                      </fieldset>
-                    </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <input
-                          name="subject"
-                          type="text"
-                          class="form-control"
-                          id="subject"
-                          placeholder="Subject..."
-                          required=""
-                        />
-                      </fieldset>
-                    </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <textarea
-                          name="message"
-                          rows="6"
-                          class="form-control"
-                          id="message"
-                          placeholder="Your message..."
-                          required=""
-                        ></textarea>
-                      </fieldset>
-                    </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <button type="submit" id="form-submit" class="button">
-                          Send Message
-                        </button>
-                      </fieldset>
-                    </div>
-                  </div>
-                </form>
-              </div>
+                   para o não cumprimento.</span>
+                <p></p>
+                <div class="white-button"><a href="http://contatoweb.ddns.net" target="_blank">LGPD Oficial</a></div>
             </div>
-          </div>-->
+            <div class="col-md-l6">
+                <div class="service-item">
+                    <h4>lei 1</h4>
+                    <p>
+                        Principal leii
+                    </p>
+
+                </div>
+            </div>
+            <div class="col-md-l6">
+                <div class="service-item">
+                    <h4>lei 2</h4>
+                    <p>
+                        Principal leii
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-l6">
+                <div class="service-item">
+                    <h4>lei 3</h4>
+                    <p>
+                        Principal leii
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-l6">
+                <div class="service-item">
+                    <h4>lei 4</h4>
+                    <p>
+                        Principal leii
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-l6">
+                <div class="service-item">
+                    <h4>lei 5</h4>
+                    <p>
+                        Principal leii
+                    </p>
+                </div>
+            </div>
+
         </div>
-      </section>
+    </section>
     </div>
 
     <!-- Scripts -->
@@ -469,54 +431,54 @@
     <script src="assets/js/lightbox.js"></script>
     <script src="assets/js/custom.js"></script>
     <script>
-      //according to loftblog tut
-      $(".main-menu li:first").addClass("active");
+        //according to loftblog tut
+        $(".main-menu li:first").addClass("active");
 
-      var showSection = function showSection(section, isAnimate) {
-        var direction = section.replace(/#/, ""),
-          reqSection = $(".section").filter(
-            '[data-section="' + direction + '"]'
-          ),
-          reqSectionPos = reqSection.offset().top - 0;
+        var showSection = function showSection(section, isAnimate) {
+            var direction = section.replace(/#/, ""),
+                reqSection = $(".section").filter(
+                    '[data-section="' + direction + '"]'
+                ),
+                reqSectionPos = reqSection.offset().top - 0;
 
-        if (isAnimate) {
-          $("body, html").animate(
-            {
-              scrollTop: reqSectionPos
-            },
-            800
-          );
-        } else {
-          $("body, html").scrollTop(reqSectionPos);
-        }
-      };
+            if (isAnimate) {
+                $("body, html").animate({
+                        scrollTop: reqSectionPos
+                    },
+                    800
+                );
+            } else {
+                $("body, html").scrollTop(reqSectionPos);
+            }
+        };
 
-      var checkSection = function checkSection() {
-        $(".section").each(function() {
-          var $this = $(this),
-            topEdge = $this.offset().top - 80,
-            bottomEdge = topEdge + $this.height(),
-            wScroll = $(window).scrollTop();
-          if (topEdge < wScroll && bottomEdge > wScroll) {
-            var currentId = $this.data("section"),
-              reqLink = $("a").filter("[href*=\\#" + currentId + "]");
-            reqLink
-              .closest("li")
-              .addClass("active")
-              .siblings()
-              .removeClass("active");
-          }
+        var checkSection = function checkSection() {
+            $(".section").each(function() {
+                var $this = $(this),
+                    topEdge = $this.offset().top - 80,
+                    bottomEdge = topEdge + $this.height(),
+                    wScroll = $(window).scrollTop();
+                if (topEdge < wScroll && bottomEdge > wScroll) {
+                    var currentId = $this.data("section"),
+                        reqLink = $("a").filter("[href*=\\#" + currentId + "]");
+                    reqLink
+                        .closest("li")
+                        .addClass("active")
+                        .siblings()
+                        .removeClass("active");
+                }
+            });
+        };
+
+        $(".main-menu").on("click", "a", function(e) {
+            e.preventDefault();
+            showSection($(this).attr("href"), true);
         });
-      };
 
-      $(".main-menu").on("click", "a", function(e) {
-        e.preventDefault();
-        showSection($(this).attr("href"), true);
-      });
-
-      $(window).scroll(function() {
-        checkSection();
-      });
+        $(window).scroll(function() {
+            checkSection();
+        });
     </script>
-  </body>
+</body>
+
 </html>
