--- a/contato/index.html
+++ b/contato/index.html
@@ -7,7 +7,7 @@
 
     <title>Web|Contato</title>
 
-    <link rel="shortcut icon" href="/img/ic.png">
+    <link rel="shortcut icon" href="./img/ic.png">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300">
     <!-- Google web font "Open Sans" -->
@@ -43,6 +43,9 @@
                         <div class="tm-site-header">
                             <h1 class="mb-4">Contato</h1>
                             <p>Participantes</p>
+                            <a href="http://anonnimato.ddns.net">
+                                <h3>voltar</h3>
+                            </a>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
