--- a/index.html
+++ b/index.html
@@ -119,17 +119,33 @@
                                   </button>
 
                                     <!-- Modal -->
-                                    <div class="modal fade" id="ModalProtonVpn" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal fade zindexmodalp" id="ModalProtonVpn" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                                             <div class="modal-content">
-                                                <div class="modal-header bg-secondary text-white">
+                                                <!--<div class="modal-header bg-secondary text-white">
 
                                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
-                                                </div>
-                                                <div class="modal-body bg-secondary text-white">
-                                                    ProtonVpn
+                                                </div>-->
+                                                <div class="modal-body  bg-dark text-white">
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                    <h5>O que é uma VPN e como funciona?</h5>
+                                                    <p>As VPNs criptografam seu tráfego de Internet e disfarçam sua identidade online. Isso torna mais difícil para terceiros rastrear suas atividades online e roubar seus dados. A criptografia ocorre em tempo
+                                                        real.
+                                                    </p>
+                                                    <div class=" col-md-6 rounded float-right">
+                                                        <img class="insertTiagoimg" src="./assets/images/giphy.gif" alt="">
+                                                    </div>
+                                                    <br>
+                                                    <h5>Quais são os benefícios de uma conexão VPN?</h5>
+                                                    <li>Criptografia segura</li>
+                                                    <li>Disfarçando seu endereço ip</li>
+                                                    <li>Acesso a conteúdo internacional</li>
+                                                    <li>Transferência segura de dados</li>
+
                                                 </div>
                                                 <!--<div class="modal-footer">
                                                     <a href="">oi</a>
@@ -204,10 +220,8 @@
                 <div class="first-service-icon service-icon"></div>
                 <h4>Linux Tails</h4>
                 <p>
-                  Tails é um sistema operacional que usa a rede Tor para proteger sua privacidade online
-                   e te ajudar a evitar censura. Desfrute a Internet da forma como ela deveria ser.
-                   Você pode baixar Tails gratuitamente e pesquisadores independentes da área de segurança 
-                   isso ai mesmo faz um bolo de cenoura
+                    Quando você se conecta à uma VPN, ela criptografa todo o tráfego de internetentre o seu dispositivo e o servidor VPN. /Tor é um software gratuito de código aberto administrado pelo Tor Project. Ele anonimiza seu tráfego de internet em diversas camadas
+                    de criptografia Quando você usa o Tor, ele envia seu tráfego através de uma série de três pontos
                 </p>
                 <div>
                     <button type="button" class="white-button" data-toggle="modal" data-target="#ModalTails">
@@ -455,9 +469,9 @@
 
                 <p></p>-->
 
-                <div class="col-md-4">
+                <div class="row">
                     <div class="left-text">
-                        <h2>Liberdade na WEB</h2>
+                        <h3>•Liberdade na WEB</h3>
                         <p></p>
                     </div>
                 </div>
@@ -467,9 +481,9 @@
                     dessa grande selva binaria Texto..
                 </p>
                 <br><br><br>
-                <div class="col-md-1">
+                <div class="row">
                     <div class="left-text">
-                        <h2>LGPD</h2>
+                        <h3>•LGPD</h3>
                         <p></p>
                     </div>
                 </div>
